[package]
name = "mut_set"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Junzhuo <zhou@junzhuo.site>"]
description = "A safe implementation for mutable hashset!"
keywords = [
    "mutable",
    "hashset",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
