[package]
name = "mut_set"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true

[workspace.package]
version = "0.5.3"
rust-version = "1.82"
edition = "2021"
license = "MIT"
authors = ["Junzhuo <zhou@junzhuo.site>"]
description = "A safe implementation for HashSet with iter_mut and get_mut"
keywords = [
    "hashset",
    "mutable",
    "iter_mut",
]
readme = "README.md"
repository = "https://github.com/zao111222333/mut_set"
documentation = "https://docs.rs/mut_set"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["derive", "tests"]

[features]
default = []
__dbg_disable_mem_layout = ["mut_set_derive/__dbg_disable_mem_layout"]

[dependencies]
serde = { version = "1.0" }
# mut_set_derive = { path = "derive" }
mut_set_derive = "0.5.3"